; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_htmltextnode.c_HTMLDOMTextNode_QI.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mshtml/extr_htmltextnode.c_HTMLDOMTextNode_QI.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32 }

@.str = private unnamed_addr constant [15 x i8] c"(%p)->(%s %p)\0A\00", align 1
@IID_IHTMLDOMTextNode = common dso_local global i32 0, align 4
@IID_IHTMLDOMTextNode2 = common dso_local global i32 0, align 4
@S_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i8**)* @HTMLDOMTextNode_QI to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @HTMLDOMTextNode_QI(i32* %0, i32 %1, i8** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8**, align 8
  %8 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8** %2, i8*** %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = call %struct.TYPE_4__* @impl_from_HTMLDOMNode(i32* %9)
  store %struct.TYPE_4__* %10, %struct.TYPE_4__** %8, align 8
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @debugstr_mshtml_guid(i32 %12)
  %14 = load i8**, i8*** %7, align 8
  %15 = call i32 @TRACE(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), %struct.TYPE_4__* %11, i32 %13, i8** %14)
  %16 = load i32, i32* %6, align 4
  %17 = call i64 @IsEqualGUID(i32* @IID_IHTMLDOMTextNode, i32 %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %24

19:                                               ; preds = %3
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 2
  %22 = bitcast i32* %21 to i8*
  %23 = load i8**, i8*** %7, align 8
  store i8* %22, i8** %23, align 8
  br label %40

24:                                               ; preds = %3
  %25 = load i32, i32* %6, align 4
  %26 = call i64 @IsEqualGUID(i32* @IID_IHTMLDOMTextNode2, i32 %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %33

28:                                               ; preds = %24
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 1
  %31 = bitcast i32* %30 to i8*
  %32 = load i8**, i8*** %7, align 8
  store i8* %31, i8** %32, align 8
  br label %39

33:                                               ; preds = %24
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 0
  %36 = load i32, i32* %6, align 4
  %37 = load i8**, i8*** %7, align 8
  %38 = call i32 @HTMLDOMNode_QI(i32* %35, i32 %36, i8** %37)
  store i32 %38, i32* %4, align 4
  br label %46

39:                                               ; preds = %28
  br label %40

40:                                               ; preds = %39, %19
  %41 = load i8**, i8*** %7, align 8
  %42 = load i8*, i8** %41, align 8
  %43 = bitcast i8* %42 to i32*
  %44 = call i32 @IUnknown_AddRef(i32* %43)
  %45 = load i32, i32* @S_OK, align 4
  store i32 %45, i32* %4, align 4
  br label %46

46:                                               ; preds = %40, %33
  %47 = load i32, i32* %4, align 4
  ret i32 %47
}

declare dso_local %struct.TYPE_4__* @impl_from_HTMLDOMNode(i32*) #1

declare dso_local i32 @TRACE(i8*, %struct.TYPE_4__*, i32, i8**) #1

declare dso_local i32 @debugstr_mshtml_guid(i32) #1

declare dso_local i64 @IsEqualGUID(i32*, i32) #1

declare dso_local i32 @HTMLDOMNode_QI(i32*, i32, i8**) #1

declare dso_local i32 @IUnknown_AddRef(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
